--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "env-cmd -f .env.dev next dev",
     "dev:local": "env-cmd -f .env.local next dev",
-    "build": "next build",
+    "build": "env-cmd -f .env.dev next build",
     "start": "next start",
     "lint": "next lint",
     "api": "ts-codegen"
