--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "env-cmd": "^10.1.0",
     "next": "13.5.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-loading-skeleton": "^3.3.1"
   },
   "devDependencies": {
     "@ts-tool/ts-codegen-cli": "^3.3.4",
